update: ユーザーのメールアドレスに状態を持たせる
