# controller/api/users.go
@@ -17,7 +17,10 @@ func ToUserMedia(u *model.UserModel) *app.User {
 	return &app.User{
 		ID:   u.ID,
 		Name: u.Name,
-		Mail: u.Mail.Email,
+		Mail: &app.Mail{
+            Email: u.Mail.Email,
+            State: u.Mail.State,
+        },
 		Tel:  u.Tel,
 	}
 }
