# design/user_types.go
@@ -112,3 +112,16 @@ var SignupPayload = Type("SignupPayload", func() {
 	})
 	Required("email")
 })
+
+var Mail = Type("Mail", func() {
+    Description("メールアドレスとその状態")
+    Attribute("email", String, "メールアドレス", func() {
+        Format("email")
+        Example("yKicchanApp@gmail.com")
+    })
+    Attribute("state", String, "メールアドレスの状態", func() {
+        Enum("Pending", "OK", "BAN")
+        Example("OK")
+    })
+    Required("email", "state")
+})
